--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -5,4 +5,5 @@ $selected-color: #216ba5;
 $border-radius: 4px;
 $item-size: 24px;
 $calendar-margin: 5px;
+$day-margin: 2px;
 $triangleSize: 8px;
